Added table view with student records

--- a/lab05/src/sample/sample.fxml
+++ b/lab05/src/sample/sample.fxml
@@ -10,13 +10,12 @@
 
     <TableView fx:id="tableView" GridPane.columnIndex="0" GridPane.rowIndex="0">
         <columns>
-            <TableColumn fx:id="studentIDColumn">Student ID</TableColumn>
-            <TableColumn fx:id="midtermColumn">Midterm</TableColumn>
-            <TableColumn fx:id="assignmentColumn">Assignments</TableColumn>
-            <TableColumn fx:id="finalExamColumn">Final Exam</TableColumn>
-            <TableColumn fx:id="finalMarkColumn">Final Mark</TableColumn>
-            <TableColumn fx:id="letterGradeColumn">Letter Grade</TableColumn>
-
+            <TableColumn fx:id="studentIDColumn" text="StudentID"></TableColumn>
+            <TableColumn fx:id="midtermColumn" text="Midterm"></TableColumn>
+            <TableColumn fx:id="assignmentColumn" text="Assignments"></TableColumn>
+            <TableColumn fx:id="finalExamColumn" text="Final Exam"></TableColumn>
+            <TableColumn fx:id="finalMarkColumn" text="Final Mark"></TableColumn>
+            <TableColumn fx:id="letterGradeColumn" text="Letter Grade"></TableColumn>
         </columns>
     </TableView>
 </GridPane>
